--- a/funnyfard.mp4.html
+++ b/funnyfard.mp4.html
@@ -1,6 +1,6 @@
 <head>
 <meta property="og:type" content="video.other">
-<meta property="twitter:player" content="https://www.youtube.com/embed/dQw4w9WgXcQ">
+<meta property="twitter:player" content="https://github.com/business-goose/business-goose.github.io/blob/main/UYhlMjDX.mp4?raw=true">
 <meta property="og:video:type" content="text/html">
 <meta property="og:video:width" content="1280">
 <meta property="og:video:height" content="720">
