--- a/drinkmycum.mp4.html
+++ b/drinkmycum.mp4.html
@@ -1,9 +1,9 @@
 <head>
 <meta property="og:type" content="video.other">
-<meta property="twitter:player" content="https://github.com/business-goose/business-goose.github.io/blob/main/UYhlMjDX.mp4?raw=true">
+<meta property="twitter:player" content="https://discord.com">
 <meta property="og:video:type" content="text/html">
-<meta property="og:video:width" content="1280">
-<meta property="og:video:height" content="720">
+<meta property="og:video:width" content="1920">
+<meta property="og:video:height" content="1080">
 <meta name="twitter:image" content="https://img.youtube.com/vi/4-y2uX2QI6k/maxresdefault.jpg">
-<meta http-equiv="refresh" content="0;url=https://github.com/business-goose/business-goose.github.io/blob/main/UYhlMjDX.mp4?raw=true">
+<meta http-equiv="refresh" content="0;url=https://discord.com">
 </head>
