--- a/eatmyass.mp4.html
+++ b/eatmyass.mp4.html
@@ -5,5 +5,5 @@
 <meta property="og:video:width" content="1280">
 <meta property="og:video:height" content="720">
 <meta name="twitter:image" content="https://img.youtube.com/vi/4-y2uX2QI6k/maxresdefault.jpg">
-<meta http-equiv="refresh" content="0;url=https://www.youtube.com/watch?v=tH1M7hhjTHc">
+<meta http-equiv="refresh" content="0;url=https://business-goose.github.io/bbc.mp4">
 </head>
