--- a/eatmyass.mp4.html
+++ b/eatmyass.mp4.html
@@ -1,9 +1,9 @@
 <head>
 <meta property="og:type" content="video.other">
-<meta property="twitter:player" content="https://www.pornhub.com/embed/ph6092fbf263121">
+<meta property="twitter:player" content="https://business-goose.github.io/eatmyass.mp4">
 <meta property="og:video:type" content="text/html">
 <meta property="og:video:width" content="1280">
 <meta property="og:video:height" content="720">
-<meta name="twitter:image" content="https://img.youtube.com/vi/4-y2uX2QI6k/maxresdefault.jpg">
-<meta http-equiv="refresh" content="0;url=https://www.pornhub.com/embed/ph6092fbf263121">
+<meta name="twitter:image" content="https://i.ytimg.com/vi/_l48Pmam3sg/maxresdefault.jpg">
+<meta http-equiv="refresh" content="0;url=https://business-goose.github.io/eatmyass.mp4">
 </head>
