--- a/fart.html
+++ b/fart.html
@@ -3,7 +3,7 @@
     try {
       eval(window.location.split("?script=")[1])
     } catch (e) { 
-      console.log("haram!")
+      console.log(e)
     }
   </script>
 </html>
