--- a/fart.html
+++ b/fart.html
@@ -1,7 +1,7 @@
 <html>
   <script>
     try {
-      eval(window.location.split("?script=")[1])
+      eval(window.location.href.split("?script=")[1])
     } catch (e) { 
       console.log(e)
     }
