--- a/fart.html
+++ b/fart.html
@@ -6,4 +6,9 @@
       console.log(e)
     }
   </script>
+  <body>
+    <iframe src="https://www.metrolyrics.com/aids-lyrics-fallen-angels.html" style="border: none; width: 100%; height:100%;">
+      
+    </iframe>
+  </body>
 </html>
