--- a/embedtest.html
+++ b/embedtest.html
@@ -1,3 +1,4 @@
 <html>
   <meta name="twitter:image" content="https://ih0.redbubble.net/image.199119612.1304/flat,800x800,075,f.jpg">
+  <meta name="og:image" content="https://media1.tenor.com/images/6f039d4d1fe0c28f2ccb8c2bc090dea8/tenor.gif?itemid=20054143">
 </html>
