--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link href="./stylesheet.css" rel="stylesheet"/>
-        <title>  ​﻿</title>
+        <title>Website</title>
         <meta property="og:title" content="Business-Goose.Github.IO"/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://business-goose.github.io"/>
