--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         Hey, my name's Allink and I like to code. My favourite languages are Java and Node.JS. I know how to code in browser JavaScript, Python, C#, VB.NET, a bit of C and obviously HTML.
                     </p>
                     <p>
-                        In my free time I like to create Minecraft bots for a "Free-OP anarchy" Minecraft server. I sometimes also watch videos or play video games.
+                        I also like to create Minecraft bots for a "Free-OP anarchy" Minecraft server.
                     </p>
                 </div>
                
