--- a/index.html
+++ b/index.html
@@ -47,11 +47,15 @@
             <div id="card" data-kinetics-attraction>
                 <div class="text">
                     <p>
-                        Hey, my name's Allink and I like to code. My favourite languages are Java and Node.JS. I know how to code in browser JavaScript, Python, C#, VB.NET, a bit of C and obviously HTML.
+                        I'm Allink, and I like programming. My favourite languages are Java & Node.JS. Other languages I know: C, C# & Browser JavaScript; usually, I don't code in just these languages - I usually center my projects around large dependencies like the Spigot API & discord.js. 
                     </p>
                     <p>
-                        I also like to create Minecraft bots for a "Free-OP anarchy" Minecraft server.
+                        I'm currently learning German. I would consider myself a beginner, though.
                     </p>
+                    <p>
+                        A common misconception that people have is that I speak their native language. I do not. English is my primary language.
+                    </p>
+
                 </div>
                
             </div>
