--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
     <head>
         <link href="./stylesheet.css" rel="stylesheet"/>
         <title>Website</title>
-        <meta property="og:title" content="Business-Goose.Github.IO"/>
+        <meta property="og:description" content="My personal website. You can read about how many programming languages I can write in, or look at my socials."/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://business-goose.github.io"/>
-        <meta property="og:image" content="./card.png">
-        <meta name="theme-color" content="">
         <script src="https://unpkg.com/@drum-n-bass/kinetics"></script>
         <script>
             const params = {
