--- a/stopaskingdumbquestions.html
+++ b/stopaskingdumbquestions.html
@@ -2,11 +2,8 @@
     <!--大家好!!!!!!!!!! , 今天我要去相当LeAKBOOM1S .... , 有太多的机器人，这让我很难过 :( 我会让习近平去执行所有的球员 XD !!!!!!!!!!!!!! , 伙计们，我是如此的时髦和酷，退出kabom111111111111?????????????////////!!!!!!!!!-->
     <head>
         <link href="./stylesheet.css" rel="stylesheet"/>
-        <title>Website</title>
-        <meta property="og:title" content="Business-Goose.Github.IO"/>
-        <meta property="og:type" content="website"/>
-        <meta property="og:url" content="https://business-goose.github.io"/>
-        <meta property="og:image" content="./card.png">
+        <title>Stop asking dumb questions!</title>
+        <meta property="og:description" content="Don't ask me questions without looking it up on a search engine. If you can't find any information there, please read the documentation or join a support server/channel. Try re-wording your question as well. If all that fails, DM me. I may know the answer, or I may not. No guarantees are made. I'm not here to Google things for you, I'm here to have fun and enjoy my time. If you're not willing to do any of these actions because you're &quot;lazy&quot;, why did you bother messaging me? 🥴"/>
         <meta name="theme-color" content="">
         <script src="https://unpkg.com/@drum-n-bass/kinetics"></script>
         <script>
