--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta property="og:description" content="My personal website. You can read about how many programming languages I can write in, or look at my socials."/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://business-goose.github.io"/>
+        <meta property="theme-color" content="#00D1D1"/>
         <script src="https://unpkg.com/@drum-n-bass/kinetics"></script>
         <script>
             const params = {
