--- a/stopaskingdumbquestions.html
+++ b/stopaskingdumbquestions.html
@@ -4,6 +4,7 @@
         <link href="./stylesheet.css" rel="stylesheet"/>
         <title>Stop asking dumb questions!</title>
         <meta property="og:description" content="Don't ask me questions without looking it up on a search engine. If you can't find any information there, please read the documentation or join a support server/channel. Try re-wording your question as well. If all that fails, DM me. I may know the answer, or I may not. No guarantees are made. I'm not here to Google things for you, I'm here to have fun and enjoy my time. If you're not willing to do any of these actions because you're &quot;lazy&quot;, why did you bother messaging me 🥴? Oh yeah, I'm also not interested in any &quot;wil you maek websit 4 me?!/1/11/!/11/!!?!?&quot; offers unless I say so. I don't use my social media platforms as a way to look for job opportunities/unpaid jobs."/>
+        <meta property="og:image" content="/angry.png">
         <meta name="theme-color" content="#B20000">
         <script src="https://unpkg.com/@drum-n-bass/kinetics"></script>
         <script>
